Archive2/5c/4edb2cb2576646/output
main.cpp:19:16: error: must specify at least one argument for '...' parameter of variadic macro [-Werror,-Wgnu-zero-variadic-macro-arguments]
        MAGICAL_INIT(x); // don't pass any arguments
                      ^
main.cpp:14:9: note: macro 'MAGICAL_INIT' defined here
#define MAGICAL_INIT(var, ...)  ((var) ? *var : var.init(__VA_ARGS__))
        ^
1 error generated.
